--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "scripts": {
     "start": "meteor run"
   },
+  "engines": {
+  	"node": "5.9.1"
+  },
   "dependencies": {
     "meteor-node-stubs": "~0.2.0"
   }
